<resources>

    <string name="app_name">Color Coded Clock</string>
   
    <!-- Alarm -->
    <string name="pref_alarm_title">Set alarm</string>
    <string name="pref_alarm_to_low_api">Your phone does not support this method for setting alarms.</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string> 

    <!-- Colors used for the digits -->
    <string name="pref_background_color_title">Background color</string>
    <string name="pref_background_color_summary">Color of the background.</string>
    <string name="pref_background_color_key">pref_background_color_key</string>
    <string name="pref_digit_color_title">Digits color</string>
    <string name="pref_digit_color_summary">Color of the digits.</string>
    <string name="pref_digit_color_key">pref_digit_color_key</string>
    <string name="pref_hour_color_title">Hour color</string>
    <string name="pref_hour_color_summary">Color that indicates hour.</string>
    <string name="pref_hour_color_key">pref_hour_color_key</string>
    <string name="pref_minute_color_title">Minute color</string>
    <string name="pref_minute_color_summary">Color that indicates minute.</string>
    <string name="pref_minute_color_key">pref_minute_color_key</string>
    <string name="pref_second_color_title">Second color</string>
    <string name="pref_second_color_summary">Color that indicates second.</string>
    <string name="pref_second_color_key">pref_second_color_key</string>

    <!-- Info prefs -->
    <string name="pref_info_title">Info</string>

    <!-- Share prefs -->
    <string name="pref_share_title">Like it? Share it!</string>
    <string name="sharing_text">Hey check out the \"Color Coded Clock\" at:
        https://play.google.com/store/apps/details?id=se.kjellstrand.colorclock
    </string>

    <!-- Layouts -->
    <string name="pref_layouts_title">Layouts</string>
    <string name="pref_layouts_summary">Current layout: %s</string>
    <string name="pref_layouts_dialog_title">Select layout</string>
    <string name="pref_layouts_key">pref_layouts</string>
    <string name="pref_layouts_default">@string/color_clock_5x2_layout</string>
    <string name="color_clock_2x5_layout">2x5</string>
    <string name="color_clock_5x2_layout">5x2</string>
    <string name="color_clock_3x4_layout">3x4</string>
    <string name="color_clock_4x3_layout">4x3</string>
    <string name="color_clock_1x10_layout">1x10</string>
    <string name="color_clock_10x1_layout">10x1</string>
    <string name="color_clock_3x3_layout">3x3</string>

    <string-array name="list_of_layouts">
        <item>@string/color_clock_2x5_layout</item>
        <item>@string/color_clock_5x2_layout</item>
        <item>@string/color_clock_3x4_layout</item>
        <item>@string/color_clock_4x3_layout</item>
        <item>@string/color_clock_1x10_layout</item>
        <item>@string/color_clock_10x1_layout</item>
        <item>@string/color_clock_3x3_layout</item>
    </string-array>

    <!-- Blends -->
    <string name="pref_blends_title">Blend</string>
    <string name="pref_blends_summary">Current mode: %s</string>
    <string name="pref_blends_dialog_title">Select color blend mode</string>
    <string name="pref_blends_key">pref_blends</string>
    <string name="pref_blends_default">@string/multiply_blend</string>
    <string name="average_blend">Average</string>
    <string name="screen_blend">Screen</string>
    <string name="multiply_blend">Multiply</string>
    <!-- hard light, soft light, http://en.wikipedia.org/wiki/Blend_modes -->
    
    <string-array name="list_of_blends">
        <item>@string/average_blend</item>
        <item>@string/screen_blend</item>
        <item>@string/multiply_blend</item>
    </string-array>

    <!-- Font size pref -->
    <string name="pref_digit_size_key">pref_digit_size</string>
    <string name="pref_digit_size_summary">Set the size of the digits</string>
    <string name="pref_digit_size_title">Digit size</string>
    <string name="pref_digit_size_slider_message">Pull slider to the left to make digits smaller and
        to the right to make them bigger.
    </string>
    <item name="pref_digit_size_default" format="float" type="dimen">0.5</item>

    <!-- Charsets used for the digits -->
    <string name="pref_charsets_title">Character set</string>
    <string name="pref_charsets_summary">Current set: %s</string>
    <string name="pref_charsets_dialog_title">Select character set</string>
    <string name="pref_charsets_key">pref_charsets_for_digits</string>
    <string name="pref_charsets_default">@string/latin_charset</string>
    <string name="latin_charset">1 2 3 4 5</string>
    <string name="arabic_charset">\u0661 \u0662 \u0663 \u0664 \u0665</string>
    <string name="chinese_charset">\u4e00 \u4e8c \u4e09 \u56db \u4e94</string>
    <string name="hardmode_charset">Hard mode</string>

    <string-array name="list_of_charsets">
        <item>@string/latin_charset</item>
        <item>@string/arabic_charset</item>
        <item>@string/chinese_charset</item>
        <item>@string/hardmode_charset</item>
        <!-- item>@string/khmer_charset</item -->
    </string-array>
    <string-array name="latin_digits">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="arabic_digits">
        <item>\u0660</item>
        <item>\u0661</item>
        <item>\u0662</item>
        <item>\u0663</item>
        <item>\u0664</item>
        <item>\u0665</item>
        <item>\u0666</item>
        <item>\u0667</item>
        <item>\u0668</item>
        <item>\u0669</item>
    </string-array>
    <string-array name="chinese_digits">
        <item>\u96f6</item>
        <item>\u4e00</item>
        <item>\u4e8c</item>
        <item>\u4e09</item>
        <item>\u56db</item>
        <item>\u4e94</item>
        <item>\u516d</item>
        <item>\u4e03</item>
        <item>\u516b</item>
        <item>\u4e5d</item>
    </string-array>
    <string-array name="hardmode_digits">
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>

</resources>